# cloudflare-dns-updater

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASING.md  config.example.json  pyproject.toml
.github/: dependabot.yml
.github/ci/: cutover-ok  mypy  publish-release-pr-check  pytest-hermetic  python-static  ruff  setup-python
.github/workflows/: ci.yml  merged-pr-closer.yml  release-please.yml
scripts/: embed_build_metadata.py
src/cloudflare_dns_updater/: __init__.py  cli.py  cloudflare_dns.py  ip.py  terminal.py
src/dns_updater/: __init__.py  _build_metadata.py  build_info.py  cli.py  cloudflare_dns.py  config.py  exit_codes.py  ip.py  terminal.py
tests/: conftest.py  helpers.py  test_build_info.py  test_cli.py  test_cli_errors.py  test_cli_help.py  test_cloudflare_dns.py  test_config.py  test_integration.py  test_ip.py  test_ip_discovery_consistency.py  test_nest_router_default.py  test_terminal.py
