[project]
name = "cloudflare-dns-updater"
version = "1.0.0"
description = "Update Cloudflare DNS A and AAAA records from your current external IP addresses"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Henrique Andrade", email = "thehcma@users.noreply.github.com" },
]
requires-python = ">=3.12"
keywords = [
    "cloudflare",
    "dns",
    "ddns",
    "ipv6",
    "nest-wifi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Name Service (DNS)",
]
dependencies = [
    "cloudflare>=5.2.0",
    "requests>=2.32.3",
]

[project.scripts]
cloudflare-dns-updater = "cloudflare_dns_updater.cli:main"

[project.urls]
Homepage = "https://github.com/the-hcma/cloudflare-dns-updater"
Repository = "https://github.com/the-hcma/cloudflare-dns-updater"
Issues = "https://github.com/the-hcma/cloudflare-dns-updater/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudflare_dns_updater"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "ruff>=0.9.0",
    "types-requests>=2.32.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = ["cloudflare.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live network checks (Nest WiFi, external IP services)",
]
